# GEngine

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: compilation-gengine.yml
Rtype/: CMakeLists.txt
Rtype/cmake/compilers/Apple/: armv8.cmake
Rtype/include/components/: Bullet.hpp
Rtype/include/systems/: DestroyOnCollision.hpp  InputsToGameEvents.hpp  PlayerShoot.hpp
Rtype/source/: driver.cpp  game.cpp  main.cpp  shared.cpp
Rtype/source/systems/: DestroyOnCollision.cpp  InputsToGameEvents.cpp  Start.cpp
blender/: export.py
cmake/: automate-vcpkg.cmake  define-compilers.cmake
include/GEngine/: BaseEngine.hpp  BaseEngine.inl  GEngine.hpp  GEngine.inl  visibility.hpp
include/GEngine/cvar/: cvar.hpp
include/GEngine/interface/components/: RemoteLocal.hpp
include/GEngine/interface/events/: RemoteLocal.hpp  SharedEvent.hpp
include/GEngine/interface/network/: Networked.hpp  Replay.hpp
include/GEngine/interface/network/components/: NetSend.hpp
include/GEngine/interface/network/events/: Connection.hpp  Record.hpp
include/GEngine/interface/network/systems/: ClientEventPublisher.hpp  ClientEventPublisher.inl  ClientServer.hpp  CommandManager.hpp  NetworkWatcher.hpp  RecordManager.hpp  ServerClient.hpp  ServerClients.hpp  ServerEventReceiver.hpp  ServerEventReceiver.inl  Snapshot.hpp  Updater.hpp  VoIPManager.hpp
include/GEngine/interface/systems/: RemoteLocal.hpp
include/GEngine/libdev/: Components.hpp  Constants.hpp  Events.hpp  System.hpp  Systems.hpp
include/GEngine/libdev/components/: Accelerations.hpp  Box.hpp  HitBoxs.hpp  Music.hpp  Transforms.hpp  Velocities.hpp
include/GEngine/libdev/components/driver/output/: Animation.hpp  Model.hpp  RaylibTypes.hpp  Shape3D.hpp  Sound.hpp  Sprite.hpp  Text.hpp
include/GEngine/libdev/components/gui/: Button.hpp  InputBox.hpp  SceneMember.hpp
include/GEngine/libdev/deprecated/: Collisions.hpp
include/GEngine/libdev/systems/: CLI.hpp  MainLoop.hpp  Motions.hpp  MusicManager.hpp
include/GEngine/libdev/systems/driver/: VoIPAudioHandler.hpp
include/GEngine/libdev/systems/driver/input/: KeyboardCatcher.hpp  MouseCatcher.hpp  VoIPAudioCatcher.hpp
include/GEngine/libdev/systems/driver/output/: Animate.hpp  AudioDriver.hpp  AudioManager.hpp  Draw.hpp  FontManager.hpp  ModelManager.hpp  RenderWindow.hpp  SoundManager.hpp  TextureManager.hpp  VoIPAudio.hpp
include/GEngine/libdev/systems/events/: CLI.hpp  Collision.hpp  Native.hpp
include/GEngine/libdev/systems/events/game/: Music.hpp
include/GEngine/libdev/systems/events/gui/: Scenes.hpp
include/GEngine/libdev/systems/gui/: BaseScene.hpp  BaseScene.inl  SceneManager.hpp  Widgets.hpp
include/GEngine/libdev/tools/: Raylib.hpp  rlights.h
include/GEngine/net/: cl_net_client.hpp  msg.hpp  msg_error.hpp  net.hpp  net_address.hpp  net_channel.hpp  net_client.hpp  net_common.hpp  net_event.hpp  net_exception.hpp  net_huffman.hpp  net_queue.hpp  net_queue_heap.hpp  net_record.hpp  net_server.hpp  net_socket.hpp  net_socket_error.hpp  net_socket_system.hpp  net_string.hpp  net_tcp.hpp  net_utils.hpp  net_wait.hpp
include/GEngine/net/events/: connection.hpp  disconnection.hpp  ping_result.hpp  record.hpp  socket_event.hpp
include/GEngine/net/structs/: msg_all_structs.hpp  msg_tcp_structs.hpp  msg_udp_structs.hpp
include/GEngine/net/unused/: net_ftp.hpp  net_tcp.hpp
include/GEngine/time/: time.hpp
include/GEngine/utils/: libapi.hpp
include/ecs/: ECS.hpp
include/ecs/component/: Manager.hpp  Manager.inl  SparseArray.hpp  SparseArray.inl
include/ecs/entity/: Entity.hpp  Manager.hpp
include/ecs/system/: Base.hpp  Base.inl  IsSystem.hpp  Manager.hpp  Manager.inl
rtype-3/: CMakeLists.txt  r-type.json
rtype-3/include/components/: Invincible.hpp  Player.hpp
rtype-3/include/systems/: Invincibility.hpp  Lobby.hpp  PlayerGui.hpp  PlayerShoot.hpp  Scenes.hpp  StageManager.hpp
rtype-3/source/: components.cpp  systems.cpp
rtype-3/source/systems/: DestroyOnCollision.cpp  Invincibility.cpp  Lobby.cpp  PlayerGui.cpp  PlayerShoot.cpp  Scenes.cpp  StageManager.cpp
source/GEngine/: BaseEngine.cpp  GEngine.cpp
source/GEngine/cvar/: cvar.cpp  net.cpp
source/GEngine/interface/components/: RemoteDriver.cpp
source/GEngine/interface/network/systems/: ClientServer.cpp  CommandManager.cpp  NetworkWatcher.cpp  RecordManager.cpp  ServerClients.cpp  ServerClientsHandler.cpp  Snapshot.cpp  Updater.cpp  VoIPManager.cpp
source/GEngine/interface/systems/: RemoteLocal.cpp
source/GEngine/libdev/deprecated/: Collisions.cpp
source/GEngine/libdev/systems/: AutoKiller.cpp  CLI.cpp  Collisions.cpp  MainLoop.cpp  Motions.cpp  MusicManager.cpp
source/GEngine/libdev/systems/driver/: VoIPAudioHandler.cpp
source/GEngine/libdev/systems/driver/input/: KeyboardCatcher.cpp  MouseCatcher.cpp  VoIPAudioCatcher.cpp
source/GEngine/libdev/systems/driver/output/: Animate.cpp  AudioDriver.cpp  AudioManager.cpp  Draw.cpp  ModelManager.cpp  RenderWindow.cpp  SoundManager.cpp  TextureManager.cpp  VoIPAudio.cpp
source/GEngine/libdev/systems/gui/: BaseScene.cpp  SceneManager.cpp  Widgets.cpp
source/GEngine/libdev/tools/: Raylib.cpp  rlights.cpp
source/GEngine/net/: cl_net_client.cpp  net.cpp  net_address.cpp  net_channel.cpp  net_channel_pool.cpp  net_client.cpp  net_event.cpp  net_huffman.cpp  net_record.cpp  net_server.cpp  net_socket.cpp  net_socket_system.cpp  net_tcp.cpp  net_wait.cpp
source/GEngine/net/events/: net_socket_event.cpp
source/GEngine/net/msg/: msg.cpp  msg_tcp.cpp  msg_udp.cpp
source/ecs/: ECS.cpp
source/ecs/component/: Manager.cpp
source/ecs/entity/: Manager.cpp
(+6 files in other folders)
